# bolide

./: .gitignore  Cargo.toml
config/: config.example.toml
src/: logger.rs  main.rs  term.rs
src/cmd/: help.rs  mod.rs  version.rs
src/config/: mod.rs
src/events/: mod.rs  onmsg.rs
src/tg/: mod.rs
